20201130 관통, 현장 첫 방문

--- a/Win32/Debug/AwHouse.ini
+++ b/Win32/Debug/AwHouse.ini
@@ -6,20 +6,21 @@ ProgramName=자동창고제어프로그램
 UserCode=RCP
 
 [PLC1]
-IP=127.0.0.1
-PORT=1234
+IP=192.168.101.75
+PORT=2004
 
 [PLC2]
-IP=127.0.0.1
-PORT=1236
+IP=192.168.101.76
+PORT=2004
 
 [Database]
 Connection=MSSQL
 Provider=SQLOLEDB.1
-DataSource=192.168.0.123,34333
+;DataSource=192.168.0.123,34333
+DataSource=192.168.43.204\MSSQLSERVER_2014
 InitialCatalog=WMS_SEOJIN
 ID=sa
-PW=netis1234
+PW=1234
 
 // DeleteOption : Log Keep Date ( 0: 30 days, 1 : 7 Days, 2 : All) other value : Not Delete
 [DELETE]
