입출고 테스트, 현장2일차

--- a/Win32/Debug/AwHouse.ini
+++ b/Win32/Debug/AwHouse.ini
@@ -16,11 +16,13 @@ PORT=2004
 [Database]
 Connection=MSSQL
 Provider=SQLOLEDB.1
+DataSource=220.123.73.16
 ;DataSource=192.168.0.123,34333
-DataSource=192.168.43.204\MSSQLSERVER_2014
+;DataSource=221.150.92.248,34333
+;DataSource=192.168.43.204\MSSQLSERVER_2014
 InitialCatalog=WMS_SEOJIN
-ID=sa
-PW=1234
+ID=secoaws
+PW=secoaws1!
 
 // DeleteOption : Log Keep Date ( 0: 30 days, 1 : 7 Days, 2 : All) other value : Not Delete
 [DELETE]
